test/parsing/errors/multipleManagementStrategies.compopts
--detailed-errors # multipleManagementStrategies-detailed.good
--no-detailed-errors # multipleManagementStrategies-brief.good
